--- a/templates/release/select_deploy_environment.twig
+++ b/templates/release/select_deploy_environment.twig
@@ -49,8 +49,8 @@
         </dl>
     </div>
 
-    <h2 class="leader mbn">Select An Environment</h2>
-    <p class="trailer"><span>This is a global build. You must select an environment to deploy it.</span></p>
+    <h2 class="mbn">Select An Environment</h2>
+    <p><span>This is a global build. You must select an environment to deploy it.</span></p>
 
     {{ block('env_picker') }}
 {% endblock %}
