--- a/sass/app/_github.scss
+++ b/sass/app/_github.scss
@@ -7,8 +7,7 @@
 }
 
 .github__pr {
-    @include adjust-font-size-to(ms(-3));
-    // text-transform: uppercase;
+    font-size: .6em;
 
     &.github__pr--owner .github__pr--label {
         background-color: rgb(250, 240, 210);
