--- a/sass/app/_search.scss
+++ b/sass/app/_search.scss
@@ -1,9 +1,8 @@
-
 .search-filter {
-    @include trailer();
+    margin-bottom: 1em;
 }
 .search-filter .btn {
-    @include leader(.5);
+    margin-top: .5em;
 }
 
 @include breakpoint($bp-large) {
