--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <h2 class="leader">User Info</h2>
+    <h2>User Info</h2>
     <div class="details-box">
         <ul class="list--bare">
             <li>
@@ -45,7 +45,7 @@
         </ul>
     </div>
 
-    <h2 class="leader">Contact</h2>
+    <h2>Contact</h2>
     <div class="details-box">
         <ul class="list--bare">
             <li>
@@ -115,7 +115,7 @@
 {% endblock %}
 
 {% block token_table %}
-    <h2 class="leader">Access Tokens</h2>
+    <h2>Access Tokens</h2>
     <small>Personal Access Tokens can be used to access the <a href="{{ uriFor('api.index') }}">Hal API</a>.</small>
 
     {% if tokens %}
