--- a/sass/app/_js.scss
+++ b/sass/app/_js.scss
@@ -34,9 +34,7 @@
         display: none;
     }
 }
-
 .js-search-results {
-
     > li {
         margin-bottom: 0;
         padding-left: .25em;
@@ -54,19 +52,12 @@
     margin-bottom: 0;
 }
 
-// Add Repository Github Helpers
-.js-form-toggle {
-    display: block;
-}
-.js-form-error {
-    color: red;
-    margin-bottom: 0;
+.js-credentials-form [data-type-specific],
+.js-targets-form [data-type-specific] {
+    display: none;
+
 }
 
-// Add Deployments
-.js-add-deployment__form {
-    display: none;
-}
 .js-event-logs {
     @include breakpoint($bp-medium) {
         th:nth-child(1) { width: 15%; }
